# CSC14120

./: Group_04.txt  README.md  fina_report.ipynb  report_run.ipynb
HW0/20120083/: HW0.ipynb  HW0_P1.cu  HW0_P2.cu  test.py
HW1/: HW1.ipynb  HW1_P1.cu  HW1_P2.cu
HW1/20120083/: HW1.ipynb  HW1_P2.cu
HW2/: HW2_P1.cu  HW2_P2.cu
HW2/20120083/: HW2.ipynb
HW3/: HW3.ipynb  HW3_P2.cu
HW3/20120083/: report1.nsys-rep  report2.nsys-rep
cuda_on_colab/: CMakeLists.txt  demo.cc  demo.cu  hello.cu
cuda_on_colab/src/: CMakeLists.txt  mnist.cc  mnist.h  utils.h
cuda_on_colab/src/kernel/: HW0.cu  HW0.h  Test.cu  cuda_file.cuh
cuda_on_colab/src/layer/: conv.cc  conv.h
cuda_on_colab/src/optimizer/: sgd.cc  sgd.h
mini-cnn-cpp/: CMakeLists.txt  demo.cc
mini-cnn-cpp-cpu/: demo.cc
mini-cnn-cpp-cpu/src/kernel/: GpuTimer.cuh
mini-cnn-cpp-cpu/src/layer/: conv.cc  conv.h  max_pooling.cc
mini-cnn-cpp-gpu/: demo.cc
mini-cnn-cpp-gpu/src/kernel/: HW2.cu  final.cuh
mini-cnn-cpp-gpu/src/layer/: conv.cc
mini-cnn-cpp/src/: CMakeLists.txt
mini-cnn-cpp/src/kernel/: HW0.cu  HW0.cuh  HW2.cu  HW2.cuh  cuda_file.cu  cuda_file.cuh  final.cu  final.cuh  kernel.cc
mini-cnn-cpp/src/layer/: conv.cc  conv.h  conv_cust1.cc  conv_cust1.h  conv_cust2.cc  conv_cust2.h
sad/: CMakeLists.txt  demo.cc  header.cuh  kernel.cu  main.cpp
sad/src/: mnist.cc
sad/src/kernel/: HW0.cuh
sad/src/loss/: mse_loss.h
sad1/: CMakeLists.txt  demo.cc  demo.cu
sad1/src/: CMakeLists.txt  mnist.cc  mnist.h  utils.h
sad1/src/kernel/: HW3_P1.cu  HW3_P2.cu
sad2/: CMakeLists.txt  demo.cc
sad2/src/kernel/: Check.cuh  GpuTimer.cuh  HW0.cuh  HW0_P1.cu  HW0_P1.cuh  HW0_P2.cu  HW0_P2.cuh  cuda_file.cu
